# stream-v3-backend

./: .dockerignore  .env.exemple  .gitignore  README.md  nixpacks.toml  pyproject.toml  railpack.json
api/: urls.py  urls_admin.py  urls_public.py  urls_user.py
api/serializers/: auth.py  public.py
api/views/: public.py
config/: __init__.py  celery.py  settings.py  urls.py
core/: admin.py  models.py  services.py  utils.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_platform_options_remove_platform_plan_and_more.py  0004_seed_price_tiers.py
dashboard/: models.py  report.py  tasks.py
dashboard/migrations/: 0001_initial.py  0002_alter_message_chanel_alter_notification_chanel.py  0003_rename_chanel_quewed.py
notifications/: models.py  push_service.py  services.py  tasks.py
notifications/migrations/: 0001_initial.py
payments/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  tests.py
payments/migrations/: 0001_initial.py  0002_initial.py  0003_add_platform_to_giftcode.py  0004_paymentproof_image2.py  0005_alter_order_type.py  0006_giftcode_usage_limit_giftcode_used_count_and_more.py  0007_alter_subscription_order_to_fk.py  0008_order_subscription.py  0009_auto_20260420_1612.py  0010_alter_order_purchase_date.py  0011_add_subscription_profile_history.py  0012_subscriptionmarker_order_motif_subscription_marker.py  0013_remove_subscription_marker_subscription_markers.py  0014_paymentnumber.py  (+1 more)
products/: admin.py  models.py  signals.py
tests/: conftest.py
users/: admin.py  models.py  signals.py  utils.py
(+45 files in other folders)
