[project]
name = "stream-v2"
version = "0.2.0"
description = "Stream Partner V2 Application"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.3",
    "celery>=5.6.0",
    "celery-types==0.24.0",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-celery-results>=2.6.0",
    "django-storages>=1.14.6",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
    "django-celery-beat>=2.9.0",
    "weasyprint>=68.1",
    "django-anymail[resend]>=14.0",
    "python-dateutil>=2.9.0.post0",
    "djangorestframework>=3.17.1",
    "djoser>=2.3.3",
    "djangorestframework-simplejwt>=5.5.1",
    "django-cors-headers>=4.9.0",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
